--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+.react-daterange-picker__wrapper { 
+    border: none !important;  
+}
